--- a/styles/career.css
+++ b/styles/career.css
@@ -4,6 +4,91 @@ body {
     padding: 0;
     background-color: #f5f5f5;
 }
+
+header {
+    background-color: #f2f2f2;
+}
+
+.top-bar {
+    background-color: #4A90E2;
+    color: white;
+    display: flex;
+    padding: 10px 20px;
+    margin-top: 0;
+}
+
+.top-bar span {
+    font-size: 20px;
+    margin-top: 7px;
+    margin-left: 33%;
+    text-decoration: underline;
+}
+
+.donate-button {
+    background-color: #2DD95F;
+    border: none;
+    border-radius: 5%;
+    color: white;
+    cursor: pointer;
+    padding: 10px 20px;
+    margin-left: 1%;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 15px;
+    display: flex;
+    justify-content: flex-end;
+    font-size: 17px;
+    background-color: #ffffff;
+}
+
+nav ul li {
+    margin: 0 15px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: #333333;
+    font-weight: lighter;
+}
+
+.sub-menu {
+    display: flex;
+    justify-content: flex-end;
+    background-color: #ffffff;
+    padding: 15px;
+    margin-right: 1%;
+}
+
+.sub-menu ul {
+    list-style-type: none;
+    display: flex;
+    margin: 0;
+    padding: 0;
+    font-size: 18px;
+}
+
+.sub-menu ul li {
+    margin: 0 15px;
+    margin-top: 7px;
+}
+
+.sub-menu ul li a {
+    text-decoration: none;
+    color: #4b4b4b;
+    font-weight: bold;
+}
+
+.sign-up-button {
+    background-color: #2DD95F;
+    border: none;
+    border-radius: 5%;
+    color: white;
+    cursor: pointer;
+    padding: 10px 20px;
+}
 .header {
     background-image: url('images/careers-homepage_0.jpg'); /* Replace with the actual path to your image */
     background-size: cover;
@@ -48,35 +133,6 @@ button span {
     transition: color 0.4s;
 }
 
-button:hover span {
-    color: black;
-}
-
-button::before,
-button::after {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 0;
-}
-
-button::before {
-    content: "";
-    background: #000;
-    width: 120%;
-    left: -10%;
-    transform: skew(30deg);
-    transition: transform 0.4s cubic-bezier(0.3, 1, 0.8, 1);
-}
-
-button:hover::before {
-    transform: translate3d(100%, 0, 0);
-}
-
-
-
 .section {
     display: flex;
     justify-content: center;
@@ -119,4 +175,29 @@ button:hover::before {
     height: 30px;
     border-left: 5px solid #3E5BA9;
     border-top: 5px solid #3E5BA9;
+}
+
+footer {
+    background-color: #f8f9fa;
+    padding: 20px;
+    text-align: center;
+}
+
+.footer-nav ul {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    padding: 0;
+    margin: 20px 0 0 0;
+}
+
+.footer-nav ul li a {
+    text-decoration: none;
+    color: #000;
+}
+
+.privacy-policy a {
+    text-decoration: none;
+    color: #000;
 }
