--- a/styles/crisis.css
+++ b/styles/crisis.css
@@ -1,5 +1,5 @@
 p{
-    text-align: center;
+  text-align: center;
 }
 header {
   background-color: #f2f2f2;
@@ -86,77 +86,86 @@ nav ul li a {
   padding: 10px 20px;
 }
 
-h1{
-text-align: center;
+h1 {
+  text-align: center;
 }
-body {
-font-family: Arial, sans-serif;
-margin: 0;
-padding: 0;
-background-color: #f5f5f5;
-}
-.header {
-background-image: url('images/unemployments.jpg'); /* Replace with the actual path to your image */
-background-size: cover;
-background-position: center;
-padding: 200px 0;
-text-align: center;
-font-size: 6em;
-font-weight: bold;
-color: white;
-}
-.content {
-padding: 50px 0;
-text-align: center;
-}
-.content p {
-font-size: 1em;
-color: black;
 
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f5f5f5;
 }
-.content h1{
-font-size: 60px;
-font-weight: bolder;
+
+.header {
+  background-image: url('images/unemployments.jpg'); /* Replace with the actual path to your image */
+  background-size: cover;
+  background-position: center;
+  padding: 200px 0;
+  text-align: center;
+  font-size: 6em;
+  font-weight: bold;
+  color: white;
 }
-.content h2{
+
+.content {
+  padding: 50px 0;
+  text-align: center;
+}
+
+.content p {
+  font-size: 1em;
+  color: black;
+}
+
+.content h1 {
+  font-size: 60px;
+  font-weight: bolder;
+}
+
+.content h2 {
   font-size: 48px;
   font-weight: bold;
 }
-.content h3{
+
+.content h3 {
   font-size: large;
   font-weight: bold;
-  color:green;
+  color: green;
 }
+
 .video {
   text-align: center;
   margin-top: 10px;
 }
+
 .container {
-  position: absolute;
-  top: 280%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   display: flex;
   flex-direction: row;
   background-color: white;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   max-width: 1200px;
   width: calc(100% - 40px);
-
+  margin: 40px auto; /* Center the container and add margin */
+  padding: 20px;
 }
+
 .content2 {
   padding: 40px;
   flex: 1;
 }
+
 .content2 h1 {
   font-size: 48px;
   line-height: 1.2;
   margin: 0;
 }
+
 .content2 p {
   font-size: 18px;
   color: #555;
 }
+
 .stats {
   display: flex;
   flex-direction: column;
@@ -166,14 +175,17 @@ font-weight: bolder;
   background-color: #f9f9f9;
   text-align: center;
 }
+
 .stats h2 {
   font-size: 96px;
   margin: 0;
 }
+
 .stats p {
   font-size: 24px;
   color: #555;
 }
+
 .btn {
   display: inline-block;
   padding: 10px 20px;
@@ -183,8 +195,8 @@ font-weight: bolder;
   text-decoration: none;
   font-weight: bold;
   margin-top: 20px;
-
 }
+
 .image {
   flex: 1;
   background-image: url('images/crisis.jpg');
